--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --color-primary: rgb(146, 139, 119);
+  --color-secondary: rgb(146, 139, 119);
+  --color-light: rgb(255, 250, 236);
+
+  --color-background: rgb(255, 250, 236);
+
+  --font-family: "Roboto Slab";
+}
+
+@font-face {
+  font-family: "Roboto Slab";
+  src: url("assets/fonts/Roboto_Slab/RobotoSlab-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  font-family: var(--font-family);
+}
+
+body {
+  background-color: var(--color-background);
+}
+
+.title {
+  color: var(--color-primary);
+  @apply text-5xl font-bold;
+}
+
+.para {
+  color: var(--color-secondary);
+  @apply text-base
+  font-medium;
+}
+
+.btn {
+  background-color: var(--color-primary);
+  @apply text-light
+  py-4
+  px-8
+  rounded-full;
+}
