feat(app): added login and register pages
- Added new CSS classes and variables.
- Added rest service.
- Added login and register routes.
- Implemented index page.
- Implemented header component.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
-<header class="flex justify-between items-center my-7 mx-7 p-5">
-  <h1 class="text-xl font-medium text-primary">meowTasks</h1>
+<header class="flex justify-between items-center m-7 p-5">
+  <h1 class="text-xl font-bold text-primary cursor-pointer" routerLink="">meowTasks</h1>
 
   <nav>
     <ul class="flex gap-3">
-      <li class="text-secondary"><a href="#">login</a></li>
-      <li class="text-secondary"><a href="#">register</a></li>
+      <li class="text-secondary font-medium"><a routerLink="login">login</a></li>
+      <li class="text-secondary font-medium"><a  routerLink="register">register</a></li>
     </ul>
   </nav>
 </header>
