--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,8 @@
 
   --color-background: rgb(255, 250, 236);
 
+  --color-placeholder: rgb(218, 215, 208);
+
   --font-family: "Roboto Slab";
 }
 
@@ -33,16 +35,41 @@ body {
   @apply text-5xl font-bold;
 }
 
+.subt {
+  color: var(--color-primary);
+  @apply text-2xl font-bold;
+}
+
 .para {
   color: var(--color-secondary);
-  @apply text-base
-  font-medium;
+  @apply text-base font-medium;
+}
+
+.label {
+  @apply flex flex-col gap-1;
+}
+
+.fieldset {
+  @apply flex flex-col;
+}
+
+.input {
+  @apply border-2 border-primary p-4 rounded placeholder:text-placeholder;
+}
+
+.input-radio {
+  @apply appearance-none h-12 w-12 transition checked:border-2 rounded-full border-primary;
+}
+
+.input-radio-image {
+  @apply appearance-none h-16 w-16 transition checked:border-4 rounded-full border-primary;
 }
 
 .btn {
   background-color: var(--color-primary);
-  @apply text-light
-  py-4
-  px-8
-  rounded-full;
+  @apply text-light py-4 px-8 rounded-full disabled:opacity-25;
+}
+
+.layout {
+  @apply flex justify-center items-center mx-7 px-5 pb-16;
 }
