feat(app): added alert component and listener service
- Added new CSS classes.
- Added IAlert interface.
- Added provideIcons provider.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header/>
+<app-alert [isActive]="isAlertActive" [alertTitle]="alert.alerTitle" [alertContent]="alert.alertContent" [alertType]="alert.alertType"></app-alert>
 <router-outlet/>
