feat(app): implemented meowUser login
- Added login method in rest service.
- Fixed IAlert interface and alert component for support alertTitle undefined.
- Fixed incorrect type of input in register component.
- Improved CSS class alert.

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,12 +10,12 @@
   
       <label class="label text-secondary">
         Password
-        <input class="input" type="text" placeholder="********" required formControlName="password">
+        <input class="input" type="password" placeholder="********" required formControlName="password">
       </label>
   
       <label class="label text-secondary">
         Confirm password
-        <input class="input" type="text" placeholder="********" required formControlName="passwordConfirmation">
+        <input class="input" type="password" placeholder="********" required formControlName="passwordConfirmation">
       </label>
   
       <label class="label text-secondary">
