--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,19 +1,19 @@
 <main class="layout">
-  <form action="" class="flex flex-col gap-3 w-full">
+  <form action="" class="flex flex-col gap-3 w-full" [formGroup]="form">
     <h2 class="subt">Meow, welcome!</h2>
 
     <div class="flex flex-col gap-5">
       <label class="label text-secondary">
         Nickname
-        <input class="input" type="text" placeholder="A cat lover" required>
+        <input class="input" type="text" placeholder="A cat lover" required formControlName="nickname">
       </label>
   
       <label class="label text-secondary">
         Password
-        <input class="input" type="password" placeholder="********" required>
+        <input class="input" type="password" placeholder="********" required formControlName="password">
       </label>
     </div>
 
-    <button class="btn mt-2">Sign in</button>
+    <button (click)="onLogin()" class="btn mt-2">Sign in</button>
   </form>
 </main>
