--- a/src/styles.css
+++ b/src/styles.css
@@ -76,7 +76,8 @@ body {
 
 /* Alert Component */
 .alert {
-  @apply py-5 px-16 flex items-center gap-4 rounded border-4 fixed top-10 right-5;
+  @apply p-5 flex items-center gap-4 rounded border-4 fixed top-10 right-0 left-0 mx-10
+  md:left-auto;
 }
 
 .alert-success {
