feat(app): added redirection to home
- Added Home page.
- Added home route.
- Added new CSS class.
- Added loading component.
- Added auth guard.
- Added functions in lib.
- Improved pages and components with loading.
- Fixed allow visit some routes before logged.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,9 +2,19 @@
   <h1 class="text-xl font-bold text-primary cursor-pointer" routerLink="">meowTasks</h1>
 
   <nav>
-    <ul class="flex gap-3">
-      <li class="text-secondary font-medium"><a routerLink="login">login</a></li>
-      <li class="text-secondary font-medium"><a  routerLink="register">register</a></li>
-    </ul>
+    @if (!loading) {
+      <ul class="flex gap-3">
+        @if (!token) {
+          <li class="text-secondary font-medium"><a routerLink="login">login</a></li>
+          <li class="text-secondary font-medium"><a routerLink="register">register</a></li>
+        }
+        @else {
+          <li (click)="onLogout()" class="text-secondary font-medium"><a routerLink="login">logout</a></li>
+        }
+      </ul>
+    }
+    @else {
+      <app-loading></app-loading>
+    }
   </nav>
 </header>
