--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,7 +1,7 @@
 <main class="layout flex-col">
-  <img class="h-44" src="https://pa1.aminoapps.com/6900/6fee52074a1d34383b28b220d1f2cc211c6a7f77r1-500-500_hq.gif">
+  <img class="h-44 md:h-64" src="https://pa1.aminoapps.com/6900/6fee52074a1d34383b28b220d1f2cc211c6a7f77r1-500-500_hq.gif">
   <h1 class="title">meowTasks</h1>
-  <p class="para">Task manager for cat lovers</p>
+  <p class="para text-center">Task manager for cat lovers (❤️ ω ❤️)</p>
 
   @if (!loading) {
     <div class="flex gap-4 mt-5">
