--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <main class="layout">
-  <form action="" class="flex flex-col gap-3 w-full" [formGroup]="form">
+  <form class="form" action="" class="form flex flex-col gap-3 relative" [formGroup]="form">
     <h2 class="subt">Meow, welcome!</h2>
 
     <div class="flex flex-col gap-5">
@@ -14,6 +14,8 @@
       </label>
     </div>
 
-    <button (click)="onLogin()" class="btn mt-2">Sign in</button>
+    <button (click)="onLogin()" class="btn mt-2" [disabled]="!form.valid">Sign in</button>
+
+    <img class="absolute h-32 -top-7 -right-7 md:-top-5" src="https://www.catster.com/wp-content/uploads/2023/11/Pusheen-Pusheen-Corp-800x800.png" alt="cat saying hi">
   </form>
 </main>
