--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <main class="layout">
-  <form action="" class="flex flex-col gap-3 w-full" [formGroup]="form">
+  <form action="" class="form flex flex-col gap-3" [formGroup]="form">
     <h2 class="subt">Ready to manage your tasks? Let's go</h2>
 
     <div class="flex flex-col gap-5">
@@ -26,7 +26,7 @@
       <fieldset class="fieldset">
         <legend class="text-secondary">Select your color</legend>
 
-        <div class="grid grid-cols-4 mt-2 gap-2 bg-white border-2 border-primary p-5">
+        <div class="container-inputs">
           @for (color of colors; track $index) {
             @if ($index == checkedColor) {
               <!-- First color -->
@@ -42,7 +42,7 @@
       <fieldset class="fieldset">
         <legend class="label text-secondary">Select your avatar</legend>
 
-        <div class="grid grid-cols-3 mt-2 gap-2 bg-white border-2 border-primary p-5 place-items-center">
+        <div class="container-inputs">
           @for (avatar of avatars; track $index) {
             @if ($index == checkedAvatar) {
               <!-- First avatar -->
