feat(app): added button component
- Added new icon.
- Added IButton interface.
- Added icon property in IItemMenu interface.
- Improved pages and header using button component.
- Improved CSS class.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,16 +3,24 @@
 
   <nav>
     @if (!loading) {
-      <ul class="hidden md:flex md:gap-4">
+      <ul class="hidden md:flex md:gap-4 md:items-center">
         @for (item of itemsMenu; track $index) {
           @if (token) {
-            @if (item.onlyLogged) {
-              <li><a routerLink="{{item.routeLink}}" class="{{item.isButton ? 'btn' : 'nav-link'}}">{{item.name}}</a></li>
+            @if (item.onlyLogged && !item.isButton) {
+              <li><a routerLink="{{item.routeLink}}" class="nav-link">{{item.name}}</a></li>
+            }
+
+            @if (item.onlyLogged && item.isButton) {
+              <app-button [name]="item.name" [routerLink]="item.routeLink" [icon]="item.icon"></app-button>
             }
           }
           @else {
-            @if (!item.onlyLogged) {
-              <li><a routerLink="{{item.routeLink}}" class="{{item.isButton ? 'btn' : 'nav-link'}}">{{item.name}}</a></li>
+            @if (!item.onlyLogged && !item.isButton) {
+              <li><a routerLink="{{item.routeLink}}" class="nav-link">{{item.name}}</a></li>
+            }
+
+            @if (!item.onlyLogged && item.isButton) {
+              <app-button [name]="item.name" [routerLink]="item.routeLink" [icon]="item.icon"></app-button>
             }
           }
         }
