--- a/src/styles.css
+++ b/src/styles.css
@@ -79,8 +79,7 @@ body {
 }
 
 .btn {
-  background-color: var(--color-primary);
-  @apply text-light py-4 px-8 rounded-full
+  @apply py-4 px-8 rounded-full flex items-center gap-2
   hover:opacity-90
   active:opacity-80
   disabled:opacity-30;
